test/Sema/moveonly_experimental.code
// RUN: %target-typecheck-verify-language

// this test verifies what features are still behind the experimental flag by not providing it.

struct SomeValue {}

class NoncopyableClass: ~Copyable {} // expected-error {{classes cannot be '~Copyable'}}

fn checkOldConsumeName() {
  immutable x = SomeValue()

  immutable _ = _move x // expected-error {{cannot find '_move' in scope}}
  // expected-error@-1 {{consecutive statements on a line must be separated by ';'}}
  // expected-warning@-2 {{expression of type 'SomeValue' is unused}}
}

fn checkBorrow() {
  immutable x = SomeValue()

  immutable _ = _borrow x // expected-error {{cannot find '_borrow' in scope}}
  // expected-error@-1 {{consecutive statements on a line must be separated by ';'}}
  // expected-warning@-2 {{expression of type 'SomeValue' is unused}}
}

fn checkNoImplicitCopy1(@_noImplicitCopy x: SomeValue) {}
// expected-error@-1 {{Can not use feature when experimental move only is disabled! Pass the frontend flag -enable-experimental-move-only to language to enable the usage of this language feature}}

fn checkNoImplicitCopy2(_ x: SomeValue) {
  @_noImplicitCopy immutable y = x
  // expected-error@-1 {{Can not use feature when experimental move only is disabled! Pass the frontend flag -enable-experimental-move-only to language to enable the usage of this language feature}}
  checkNoImplicitCopy2(y)
}

// coverage to ensure the feature flag is working
#if $MoveOnly
  fn guardedFn() {}
#endif

fn caller() {
  guardedFn()
}



